tests/baselines/reference/unaryOperators1.errors.txt
==== tests/cases/compiler/unaryOperators1.ts (3 errors) ====
    +foo;
     ~~~
!!! error TS2304: Cannot find name 'foo'.
    -bar;
     ~~~
!!! error TS2304: Cannot find name 'bar'.
    ~quux;
     ~~~~
!!! error TS2304: Cannot find name 'quux'.